--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -6,14 +6,24 @@
     background-color: #F9F5F8;
     display: flex;
     justify-content: space-between;
+    padding: 0px 30px;
 }
+
+.subc-footer {
+    margin-top:0;
+    background-color: #F9F5F8;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 30px;
+    line-height: 49px;
+}
+
 .logo-container {
     line-height: 49px;
     text-align: center;
 }
 .customer-care{
     display: flex;
-    padding-right: 30px;
     img {
         width: 15px;
     }
@@ -66,6 +76,9 @@
 }
 .sub-Heading {
     @include b3_14px_montserrat_charcoal();
+    @media screen and (max-width: 991px) {
+        padding: 0px 40px;
+    }
 }
 .add {
     address {
@@ -207,9 +220,8 @@
 
 }
 
-@media screen and (min-width: 992px) {
+
 .os {
-   
     padding: 30px 0 40px 0;
      .bg-order {
         .motif {
@@ -219,7 +231,6 @@
         top: -50px;
         }
 }
-} 
 .popup-form-bg {
     margin-top: 50px;
     margin-bottom: 50px;
