--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -105,7 +105,7 @@
         padding: 0 3px;
     }
     .border-add {
-        border-top: 1px solid #e6e6e6;
+        // border-top: 1px solid #e6e6e6;
         padding-top: 30px;
         label {
             font-weight: bold;
@@ -134,6 +134,7 @@
         }
     }
     .light {
+        font-weight: $light;
         color: gray;
     }
     .order-block {
@@ -389,6 +390,12 @@
           }
         }
       }
+    }
+    .delivery-instructions{
+        padding: 30px 0px;
+        margin: 0px 30px;
+        text-align: left;
+        border-bottom: 1px solid #E5E5E5;
     }
     .product{
       padding: 30px;
