shoplocator and gridlist fix

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -980,6 +980,7 @@ p.corporate-sub-heading {
   // transition: top 0.5s;
   &.hide {
     top: 0px;
+    z-index: -1;
     // transition: top 1.5s;
   }
   &.top-height{
