Estimate Delivery Date

--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -448,6 +448,9 @@
           &.with-data{
             span{
                 font-weight: $medium;
+                &.edd{
+                  font-size: 11px;
+                }
             }
           }
         }
