--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -497,6 +497,7 @@
           height: 40px;
           display: flex;
           align-items: center;
+          max-width: 60%;
         }
         .value{
           text-align: right;
