--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -144,6 +144,11 @@ $banner-mobile-height:500px;
                             padding-right: 25px;
                             margin-right: 25px;
                         }
+                        .phone {
+                            a {
+                                color: #191919;
+                            }
+                        }
                     }
                     .phone-block{
                         @include b4_12px_montserrat_charcoal();
@@ -172,6 +177,9 @@ $banner-mobile-height:500px;
                         .phone{
                             @include b4_12px_montserrat_charcoal();
                             letter-spacing: 0.36px;
+                            a{
+                                color: #191919;
+                            }
                         }
                     }
                     .get-directions{
@@ -264,12 +272,18 @@ $banner-mobile-height:500px;
                             justify-content: space-between;
                             .phone{
                                 text-align: right;
+                                a {
+                                    color: #191919;
+                                }
                             }
                         }
                         .shopper-block{
                             justify-content: space-between;
                             .phone{
                                 text-align: right;
+                                a {
+                                    color: #191919; 
+                                }
                             }
                         }
                     }
