--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -795,6 +795,7 @@
       font-weight: normal;
       overflow-y: scroll;
       z-index: 8;
+      margin-bottom: 0;
       .header{
         display: flex;
         align-items: center;
