--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -171,7 +171,7 @@
     display: -webkit-flex;
     display: flex;
     cursor: default;
-    margin-top: 30px;
+    // margin-top: 30px;
     overflow-y: auto;
     overflow-x: hidden;
     &.hide-scroll {
