--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -48,6 +48,7 @@ $light-beige: #F9F8F5;
 $med-charcoal: #4C4C4C;
 $light-charcoal: #9F9F9F;
 $lightest-charcoal: #D8D8D8;
+$dark-gray: #4A4A4A;
 
 // Secondary Palette
 $aqua: #7EAAA9;
