--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -15,6 +15,7 @@ $banner-mobile-height:500px;
         height: 438px;
         width: 100%;
         background: url("../../images/shopLocator/desktop_banner.png");
+        background-size: cover;
         .banner-text{
             line-height: 438px;
             font-family: $font-Lora;
@@ -223,6 +224,7 @@ $banner-mobile-height:500px;
         .banner {
             height: 500px;
             background: url("../../images/shopLocator/mobile_banner.png");
+            background-size: cover;
         }
         .page-description{
             padding: 0px 30px;
