--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -44,6 +44,7 @@
       position: sticky;
       position: -webkit-sticky;
       top: 30px;
+      padding: 0;
     }
     
     h3 {
@@ -113,7 +114,8 @@
         font-size: 16px;
       }
       .font {
-        font-size: 16px !important;
+        // font-size: 16px !important;
+        @include b4_12px_semibold_caps_charocal();
       }
       .btn-arrow {
         top: -15px;
@@ -174,10 +176,8 @@
     }
     
     .summary-title {
-      color: tint(#000, 40%);
-      font-size: 15px;
-      letter-spacing: 1px;
-      font-family: $font-Lato;
+     @include b4_12px_medium_medcharcoal_caps();
+     text-align: left;
     }
   
     .edit-cart {
@@ -203,10 +203,12 @@
     .product-qty,
     .product-size,
     .text-coupon {
+      margin: 30px 80px;
+      @include b5_10px_montserrat_charcoal();
       .bold {
         font-weight: bold;
       }
-      @include c10-L-R();
+      // @include c10-L-R();
       a {
         &:hover {
           text-decoration: underline;
@@ -215,10 +217,11 @@
     }
   
     .subtotal {
-      color: #000;
-      font-size: 14px;
+      // color: #000;
+      // font-size: 14px;
       // font-weight: 600;
-      font-family: $font-Lato;
+      // font-family: $font-Lato;
+      @include b4_12px_montserrat_medcharcoal();
     }
 
     .deliveryfont {
@@ -227,9 +230,10 @@
     }
   
     .grand-total {
-      font-size: 18px;
-      font-weight: 600;
-      font-family: $font-Lato;
+      // font-size: 18px;
+      // font-weight: 600;
+      // font-family: $font-Lato;
+      @include b4_12px_medium_medcharcoal_caps();
     }
 }
 
@@ -274,7 +278,7 @@
   margin-top: 15px;
   margin-bottom: 15px;
   border: 0;
-  border-top: 1px solid #eeeeee;
+  border-top:  0.5px solid #9F9F9F;
 }
 
 .text-muted {
