--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -82,6 +82,10 @@ li {
   padding-top: 40px;
 }
 
+.padd-0{
+  padding: 0px;
+}
+
 a {
   color: $cerise;
   cursor: pointer;
@@ -505,4 +509,24 @@ font-weight: bold;
   &.active {
     transform: translateY(0);
   }
+}
+
+.checkout-btn {
+  @include cerise-btn();
+  background-color: $aqua;
+  height: 60px;
+  color: $white !important;
+  &:hover {
+   color: $aqua;
+   border: 1px solid $aqua;
+  }
+  &:focus {
+    color: $aqua;
+    border: 1px solid $aqua;
+  }
+   
+  &.disabled-btn {
+   background-color:$light-charcoal;
+  }
+  
 }
