--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1019,6 +1019,14 @@ $list: $grey 92%, $white 8%;
   text-transform: uppercase;
 }
 
+@mixin b4_12px_montserrat_cerise_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $cerise;
+  text-transform: uppercase;
+}
+
 @mixin b4_12px_medium_charcoal_caps{
   font-family: $font-Montserrat;
   font-size: 12px;
