--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -210,6 +210,7 @@ $banner-mobile-height:500px;
                                 height: 100%;
                                 object-fit: contain;
                                 margin: auto; 
+                                padding: 1px;
                             }
                         }
                     }
@@ -297,6 +298,7 @@ $banner-mobile-height:500px;
                             div{
                                 img{
                                     max-height: 100%;
+                                    padding: 1px;
                                 }
                             }
                         }
