--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -308,13 +308,14 @@
 
 .text-remove-items {
   font-size: 14px;
-  margin-top: 10px;
+  margin-top: 30px;
   font-style: italic;
 
   .trigger-remove-items {
-    cursor: pointer;
+    cursor: pointer; 
     font-style: normal;
     text-decoration: underline;
+    @include b4_12px_montserrat_cerise_caps();
   }
 }
 .black {
