--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -4,6 +4,7 @@
 .subc-header {
     margin-top:0;
     background-color: #F9F5F8;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     padding: 0px 30px;
