--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -110,9 +110,9 @@
         display: block;
       }
   
-      .subtotal {
-        font-size: 16px;
-      }
+      // .subtotal {
+      //   font-size: 16px;
+      // }
       .font {
         // font-size: 16px !important;
         @include b4_12px_semibold_caps_charocal();
