--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -971,7 +971,7 @@ $list: $grey 92%, $white 8%;
 @mixin b4_12px_montserrat_medcharcoal{
   font-family: $font-Montserrat;
   font-size: 12px;
-  font-weight: $regular;
+  font-weight: $medium;
   color: $med-charcoal;
 }
 
