--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -104,8 +104,7 @@
     border-radius: 12px;
     border-style: solid;
     border-width: 1px;
-    margin-bottom: 10px;
-    width: fit-content;
+    max-width: 131px;
     align-items: center;
 }
 .quantity-pdp
