--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -297,6 +297,7 @@ $banner-mobile-height:500px;
                             height: 264px;
                             div{
                                 img{
+                                    width: 100%;
                                     max-height: 100%;
                                     padding: 1px;
                                 }
