--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -64,6 +64,7 @@
     font-size: 13px;
     font-weight: normal;
     color: $gold;
+    padding-top: 5px;
 }
 .pdp-error-msg{
     @include error-msg();
