--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -45,6 +45,24 @@
       position: -webkit-sticky;
       top: 30px;
       padding: 0;
+
+      .free-shipping-info {
+        padding: 9px 16px;
+        gap: 7px;
+        align-items: center;
+        background: $gold-light;
+    
+        img {
+          width: 13px;
+          height: 13px;
+          object-fit: contain
+        }
+        .text {
+          @include b5_10px_semibold_montserrat_charcoal();
+          letter-spacing: 0.6px;
+          color: $white;
+        }
+      }
     }
     
     h3 {
@@ -328,6 +346,7 @@
   line-height: 20px;
   justify-content: center;
   text-transform: none;
+  padding-top: 10px;
 }
 
 .wrap {
@@ -337,4 +356,13 @@
 .wishlist-icon-order-summary {
   font-size: 22px;
   padding-right: 5px;
+}
+.checkoutBtn{
+  img{
+    width: 15px;
+    height: 19px;
+    object-fit: contain;
+    margin-right: 5px;
+    vertical-align: middle;
+  }
 }
