--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -365,7 +365,6 @@
     margin-right: 5px;
     vertical-align: middle;
   }
-  span{
     @include b3_14px_montserrat_charcoal();
-  }
+    color: $white;
 }
