--- a/src/components/signin/socialLogin/styles.scss
+++ b/src/components/signin/socialLogin/styles.scss
@@ -1,12 +1,10 @@
 @import "../../../styles/partials/variables";
-@import "../../../styles/partials/mixins";
 
 .social-login-text {
-  @include b4_12px_montserrat_medium_charcoal();
-  color: #9f9f9f;
-  letter-spacing: 0.36px;
-  line-height: 20px;
-  text-transform: uppercase;
+  font-size: 12px;
+  font-family: $font-Lato;
+  color: #666;
+  letter-spacing: 1px;
 }
 
 .social-login {
