--- a/src/components/signin/popup/styles.scss
+++ b/src/components/signin/popup/styles.scss
@@ -21,9 +21,15 @@
     min-height: 100%;
     .fix-head {
       background-color: $white;
-      position: fixed;
-      width: 33%;
+      // position: fixed;
+      // width: 33%;
       z-index: 2;
+      .header {
+        margin: 0px 24px;
+        height: 70px;
+        border-bottom: 1px solid rgb(193, 193, 193);
+        width: 100%;
+      }
     }
     &.popup {
       overflow-y: scroll;
@@ -85,9 +91,15 @@
     padding-bottom: 100px;
     .fix-head {
       background-color: $white;
-      position: fixed;
-      width: 100%;
+      // position: fixed;
+      // width: 100%;
       z-index: 2;
+      .header {
+        margin: 0px 24px;
+        height: 70px;
+        border-bottom: 1px solid rgb(193, 193, 193);
+        width: 100%;
+      }
     }
   }
   .row {
@@ -120,4 +132,9 @@
 }
 .mTop72 {
   margin-top: 72px;
+}
+
+.children-container {
+  padding: 0px 24px;
+  margin-top: 40px;
 }
