--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -266,6 +266,36 @@ font-weight: bold;
   border-left: 1px solid tint(#000, 96%);
 }
 
+.charcoal-btn {
+  @include b3_14px_montserrat_charcoal();
+  text-transform: uppercase;
+  line-height: 30px;
+  letter-spacing: 0.42px;
+  color: #fff;
+  background-color: #4c4c4c;
+  width: 100%;
+  height: 60px;
+  border: none;
+  &.with-white-bg {
+    color: #191919;
+    background-color: #fff;
+    border: 1px solid #191919;
+    &:hover{
+      color: #fff;
+      background-color: #4c4c4c;
+    }
+  }
+  &.with-white-bg-no-hover{
+    color: #191919;
+    background-color: #fff;
+    border: 1px solid #191919;
+  }
+  &.disabled-btn{
+    background-color: #9f9f9f;
+    color: #fff !important;
+  }
+}
+
 .white-btn {
   @include cerise-btn();
   color: #ab1e56;
