--- a/src/containers/cartPage/styles.scss
+++ b/src/containers/cartPage/styles.scss
@@ -92,7 +92,17 @@ hr {
     //   padding: 3px 12px;
     // }
   }
+
+  @media screen and (max-width:992px){
+    margin: 35px 30px;
+  }
 }
+@media screen and (max-width:992px){
+  .empty-cart{
+    margin: 35px 0px;
+  }
+}
+
 .my-quantity{
   padding: 7px 12px;
 }
@@ -439,6 +449,13 @@ display: inline-table;
 .checkheight-mobile {
   min-height: 300px;
   padding: 0;
+  width: 100%;
+  overflow: scroll;
+  justify-content: start;
+  flex-wrap: nowrap;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .npf-msg {
