--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -368,3 +368,13 @@
     @include b3_14px_montserrat_charcoal();
     color: $white;
 }
+
+.posFixed{
+  img{
+    width: 15px;
+    height: 19px;
+    object-fit: contain;
+    margin-right: 5px;
+    vertical-align: middle;
+  }
+}
