--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1031,7 +1031,7 @@ $list: $grey 92%, $white 8%;
   font-family: $font-Montserrat;
   font-size: 12px;
   font-weight: $medium;
-  color: $charcoal19;
+  color: $charcoal19 !important;
   text-transform: uppercase;
 }
 
