--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -105,6 +105,13 @@ a {
 .text-right {
   text-align: right;
 }
+.margin-t-0 {
+  margin-top: 0px !important;
+}
+
+.margin-b-0 {
+  margin-bottom: 0px !important;
+}
 
 .margin-t-20 {
   margin-top: 20px;
