--- a/src/containers/cartPage/styles.scss
+++ b/src/containers/cartPage/styles.scss
@@ -18,7 +18,7 @@ hr {
   margin: 40px 130px;
   img {
     max-width: 100%;
-    height: 164px;
+    // height: 164px;
   }
   .collection-name {
     @include plp_coll_name_desktop();
